--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         working-directory: ./cmd/td
         run: go test -v ./...
 
-  create-release:
+  create-tag:
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
@@ -59,23 +59,13 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           
-          # Get the latest tag
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          
-          # Extract version numbers
           IFS='.' read -r major minor patch <<< "${latest_tag#v}"
-          
-          # Increment patch version
           new_patch=$((patch + 1))
           new_tag="v$major.$minor.$new_patch"
           
           echo "Creating new tag: $new_tag"
-          
-          # Create and push the new tag
           git tag -a "$new_tag" -m "Release $new_tag"
           git push origin "$new_tag"
-          
-          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
-        id: create_tag
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }} 
