--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,19 @@ on:
     paths:
       # Core application files
       - 'cmd/td/**'
+      - 'internal/**'
+      - 'go.mod'
+      - 'go.sum'
       - 'Makefile'
-      
+
+      # Documentation and configuration
+      - 'README.md'
+      - 'DEVELOPMENT.md'
+
       # Installation and packaging files
       - 'install.ps1'
       - 'PKGBUILD'
-      
+
       # CI/CD files
       - '.github/workflows/release.yml'
       - '.github/workflows/ci.yml'
@@ -63,12 +70,11 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23.5'
+          go-version: '1.24.0'
           cache: true
 
       - name: Check formatting
         if: matrix.os == 'ubuntu-latest'
-        working-directory: ./cmd/td
         run: |
           if [ "$(gofmt -l . | wc -l)" -gt 0 ]; then
             echo "The following files are not formatted:"
@@ -77,12 +83,24 @@ jobs:
           fi
 
       - name: Run go vet
-        working-directory: ./cmd/td
         run: go vet ./...
 
       - name: Run tests
-        working-directory: ./cmd/td
         run: go test -v ./...
+
+      - name: Generate coverage report
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          go test -coverprofile=coverage.out ./...
+          go tool cover -html=coverage.out -o coverage.html
+
+      - name: Upload coverage reports
+        if: matrix.os == 'ubuntu-latest'
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.out
+          flags: unittests
+          name: codecov-umbrella
 
   create-tag:
     needs: test
