--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,15 +23,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23.5'
+          go-version: '1.24.0'
           cache: true
-          
+
       - name: Run tests
-        working-directory: ./cmd/td
         run: |
           go vet ./...
           go test -v ./...
@@ -108,16 +107,15 @@ jobs:
           DATE: ${{ steps.get_version.outputs.date }}
         shell: bash
         run: |
-          cd cmd/td
           COMMIT_SHORT=${COMMIT:0:7}
           echo "Building with version=$VERSION commit=$COMMIT_SHORT date=$DATE"  # Debug output
-          go build -trimpath -ldflags="-s -w -X 'main.version=$VERSION' -X 'main.commit=$COMMIT_SHORT' -X 'main.date=$DATE'" -o ${{ matrix.binary }}
+          go build -trimpath -ldflags="-s -w -X 'main.version=$VERSION' -X 'main.commit=$COMMIT_SHORT' -X 'main.date=$DATE'" -o ${{ matrix.binary }} ./cmd/td
 
       - name: Prepare Release Files
         shell: bash
         run: |
           mkdir -p release
-          cp cmd/td/${{ matrix.binary }} release/
+          cp ${{ matrix.binary }} release/
           cp LICENSE release/
           cp README.md release/
           cd release
