ci: fix workflow syntax by quoting secret conditionals
GitHub Actions requires if: expressions with secrets to be quoted:
if: "${{ secrets.SECRET != '' }}"

This fixes the 'Unrecognized named-value: secrets' error.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -169,7 +169,7 @@ jobs:
   homebrew:
     needs: [build, release]  # Need both to get version and ensure release exists
     runs-on: ubuntu-latest
-    if: ${{ secrets.TAP_GITHUB_TOKEN != '' }}
+    if: "${{ secrets.TAP_GITHUB_TOKEN != '' }}"
     steps:
       - uses: actions/checkout@v4
         with:
@@ -226,7 +226,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: archlinux:base-devel
-    if: ${{ secrets.AUR_SSH_PRIVATE_KEY != '' }}
+    if: "${{ secrets.AUR_SSH_PRIVATE_KEY != '' }}"
     steps:
       - uses: actions/checkout@v4
 
